fix rating card

--- a/index-no-auth.html
+++ b/index-no-auth.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.min.css??=v=20230820152806">
+  <link rel="stylesheet" href="css/style.min.css??=v=20230829133359">
   <title>Boostify</title>
 </head>
   <body>
@@ -228,23 +228,7 @@
           <div class="container reviews-section__container">
             <div class="reviews-section__inner">
               <p class="reviews-section__suptitle">Average service rate 4.9 stars</p>
-              <div class="reviews-section__rating-header">
-                <svg class="u-icon">
-                  <use xlink:href="images/icons/icons.svg#star"></use>
-                </svg>
-                <svg class="u-icon">
-                  <use xlink:href="images/icons/icons.svg#star"></use>
-                </svg>
-                <svg class="u-icon">
-                  <use xlink:href="images/icons/icons.svg#star"></use>
-                </svg>
-                <svg class="u-icon">
-                  <use xlink:href="images/icons/icons.svg#star"></use>
-                </svg>
-                <svg class="u-icon">
-                  <use xlink:href="images/icons/icons.svg#star"></use>
-                </svg>
-              </div>
+              <div class="u-rating reviews-section__rating-header" style="--rating-value: 100%"></div>
               <h2 class="reviews-section__title">1177 reviews</h2>
               <p class="reviews-section__subtitle">Feedback can only be left after the order has been completed. That's why every review here is from our real customers.</p>
               <div class="reviews-section__list">
@@ -265,23 +249,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -301,23 +269,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -337,23 +289,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -373,23 +309,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -409,23 +329,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -445,23 +349,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -481,23 +369,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -517,23 +389,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -553,23 +409,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -589,23 +429,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
               </div>
@@ -780,6 +604,6 @@
 </div>
     </div>
 
-    <script src="js/app.min.js??=v=20230820152806"></script>
+    <script src="js/app.min.js??=v=20230829133359"></script>
   </body>
 </html>
