--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.min.css??=v=20230820152806">
+  <link rel="stylesheet" href="css/style.min.css??=v=20230829133359">
   <title>Boostify</title>
 </head>
   <body>
@@ -263,23 +263,7 @@
           <div class="container reviews-section__container">
             <div class="reviews-section__inner">
               <p class="reviews-section__suptitle">Average service rate 4.9 stars</p>
-              <div class="reviews-section__rating-header">
-                <svg class="u-icon">
-                  <use xlink:href="images/icons/icons.svg#star"></use>
-                </svg>
-                <svg class="u-icon">
-                  <use xlink:href="images/icons/icons.svg#star"></use>
-                </svg>
-                <svg class="u-icon">
-                  <use xlink:href="images/icons/icons.svg#star"></use>
-                </svg>
-                <svg class="u-icon">
-                  <use xlink:href="images/icons/icons.svg#star"></use>
-                </svg>
-                <svg class="u-icon">
-                  <use xlink:href="images/icons/icons.svg#star"></use>
-                </svg>
-              </div>
+              <div class="u-rating reviews-section__rating-header" style="--rating-value: 100%"></div>
               <h2 class="reviews-section__title">1177 reviews</h2>
               <p class="reviews-section__subtitle">Feedback can only be left after the order has been completed. That's why every review here is from our real customers.</p>
               <div class="reviews-section__list">
@@ -300,23 +284,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -336,23 +304,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 20%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -372,23 +324,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 40%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -408,23 +344,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 60%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -444,23 +364,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 80%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -480,23 +384,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 100%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -516,23 +404,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -552,23 +424,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -588,23 +444,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
                 <div class="reviews-card reviews-section__list-card" data-aos data-aos-offset="20">
@@ -624,23 +464,7 @@
                   </div>
                   <div class="reviews-card__author">
                     <div class="reviews-card__author-name">Rodri G</div>
-                    <div class="reviews-card__author-rating">
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                      <svg class="u-icon">
-                        <use xlink:href="images/icons/icons.svg#star"></use>
-                      </svg>
-                    </div>
+                    <div class="u-rating reviews-card__author-rating" style="--rating-value: 50%"></div>
                   </div>
                 </div>
               </div>
@@ -815,6 +639,6 @@
 </div>
     </div>
 
-    <script src="js/app.min.js??=v=20230820152806"></script>
+    <script src="js/app.min.js??=v=20230829133359"></script>
   </body>
 </html>
